--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Assignment 2</title>
-		<meta charset="utf-8" />
-		<link rel="stylesheet" href="/static/css/style.css" />
+		<title>Assignment 1 - INFO 253 Web Architecture</title>
+		<link rel="stylesheet" href="static/css/style.css" />
 	</head>
 	<body>
-		<h1>Hello World</h1>
+		<header>
+<nav class="nav nav-masthead">
+                <a class="nav-link" href="./">Home</a>
+                <a class="nav-link" href="./contact">Contact us</a>
+                <a class="nav-link" href="./about">About us</a>
+        </nav>
+		</header>
 
-		<script src="/static/js/script.js"></script>
 
+		<h1>Alice Yang's Blog: Food for Thought</h1>
+		<a href="./blog/8-experiments-in-motivation">8 Experiments in Motivation</a>
+		<br>
+		<a href="./blog/a-mindful-shift-of-focus">A Mindful Shift of Focus</a>
+		<br>
+		<a href="./blog/how-to-develop-an-awesome-sense-of-direction">How to Develop an Awesome Sense of Direction</a>
+		<br>
+		<a href="./blog/training-to-be-a-good-writer">Training to Be a Good Writer</a>
+		<br>
+		<a href="./blog/what-productivity-systems-wont-solve">What Productivity Systems Won't Solve</a>
+
+<footer class="container-fluid bg-4 text-center">
+  <p>Posted by: Alice Yang</p>
+  <p>Contact information: <a href="aliceyang@berkeley.edu">
+  aliceyang@berkeley.edu</a>.</p>
+</footer>
 	</body>
-</html>		
+</html>
